# agrotoken-farm-investment

./: .gitignore  ADMIN_MINT_GUIDE.md  AUTOMATIC_MINTING.md  AUTO_MINTING_CONFIG.md  AUTO_MINT_IMPLEMENTATION.md  BALANCE_FIX_SUMMARY.md  COMPLETE_FIXES_SUMMARY.md  CONTRACT_ID.txt  Cargo.toml  DEBUG_CLEANUP_SUMMARY.md  DEPLOYMENT_COMPLETE.md  FINAL_STATUS_COMPLETE.md  FINAL_TRANSFER_SOLUTION.js  FRONTEND_TESTING_GUIDE.md  HIZLI_BASLANGIC.md  LICENSE  MANUEL_TEST_REHBERI.md  PDR-FRONTEND-TEMP.md  QUICK_TRANSFER_TEST.md  README-TR.md  README.md  RWA_TEMPLATE_README.md  STATUS_UPDATE.md  STELLAR_DEPLOYMENT_GUIDE.md  STELLAR_KODLARI_REHBERI.md  TRANSFER_COMPLETE_SUCCESS.md  TRANSFER_FIX_COMPLETE.md  TRANSFER_ISSUE_RESOLVED.md  USAGE_GUIDE.md  balance-fix-verification.js  check-auto-minting.ps1  check-build-tools.ps1  check-contract-state.js  check-transaction.ps1  debug-cleanup-verification.js  deploy-contract-clean.ps1  deploy-contract-simple.ps1  deploy-contract.ps1  diagnose-transfer-issue.js  final-transfer-test-guide.sh  (+19 more)
.stellar/identity/: admin_key.toml  alice.toml  bob.toml  charlie.toml  diana.toml  test_user.toml  test_user2.toml
.stellar/network/: testnet.toml
rwa-frontend/: DEPLOYMENT.md  README.md  deploy.ps1  deploy.sh  package-lock.json  package.json  test-wallet-persistence.html  vercel.json
rwa-frontend/app/: globals.css  layout.tsx  page.tsx
rwa-frontend/hooks/: useWalletConnection.ts
rwa-frontend/lib/: compliance.ts  contract.ts  freighter-detector.ts  payment.ts  (+2 more)
src/: lib.rs  lib.rs.backup  test.rs
temp-bindings/: README.md  package.json
(+27 files in other folders)
