[package]
name = "agrotoken-farm-investment"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Agricultural asset tokenization platform smart contract for Stellar Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
stellar-strkey = "0.0.8"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true